Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL)
-
None
Description
Shutdown keeps on hanging because purge threads are waiting on purge_sys.check_stop_FTS()
--source include/have_partition.inc
|
--source include/have_innodb.inc
|
create table t1 (f1 int, f2 char(100))engine=innodb partition by hash(f1) partitions 2;
|
ALTER TABLE t1 ADD FULLTEXT(f2);
|
set global innodb_fast_shutdown=0;
|
--source include/restart_mysqld.inc
|
DROP TABLE t1;
|
stop_FTS is being called for each partition, but it calls resume_FTS() only once in alter command.
Attachments
Issue Links
- is caused by
-
MDEV-25506 Atomic DDL: .frm file is removed and orphan InnoDB tablespace is left behind upon crash recovery
-
- Closed
-